# secure-eraser

./: CHANGELOG.md  PERFORMANCE.md  README.md  SECURITY.md  main.py  pyproject.toml  report.json  secure-eraser-commands.md  secure_eraser.py  secure_eraser_all_in_one.py
docs/: README.md  basic_usage.md  custom_patterns.md  installation.md  job_management.md  metadata_wiping.md  overview.md  performance.md  reporting.md  security_standards.md  troubleshooting.md  verification.md  web_interface.md
secure_eraser_pkg/: __init__.py  cli.py
secure_eraser_pkg/core/: __init__.py  eraser.py  verification.py
secure_eraser_pkg/core/performance/: __init__.py  batch_processing.py  gpu_acceleration.py  pause_resume.py  resource_optimizer.py
secure_eraser_pkg/core/security/: __init__.py  anti_forensics.py  custom_patterns.py  military_standards.py  secure_memory.py
secure_eraser_pkg/reporting/: __init__.py  html_report.py  html_report.py.bak  html_template.py  json_report.py  pdf_report.py
secure_eraser_pkg/utils/: __init__.py  logging_setup.py  patterns.py  system_info.py
secure_eraser_pkg/utils/logging_setup/: __init__.py
