[tool.poetry]
name = "secure-eraser"
version = "1.0.0"
description = "Cryptographically secure file erasure application with advanced verification and reporting capabilities"
authors = ["Secure Eraser Team"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
matplotlib = "^3.7.1"
reportlab = "^4.0.4"
py-cpuinfo = "^9.0.0"
psutil = "^5.9.5"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"